# ChangeLog for app-i18n/uim-svn
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-i18n/uim-svn/ChangeLog,v 1.11 2004/11/04 14:28:31 hattya Exp $

  04 Nov 2004; Akinori Hattori <hattya@gentoo.org>
  files/uim-svn-qtkde-helper.diff, uim-svn-20040709.ebuild:
  add dict and fep use flags. and some updates.

  10 Aug 2004; Akinori Hattori <hattya@gentoo.org> uim-svn-20040709.ebuild:
  fixed access violation of qtkde-helper.

  10 Aug 2004; Akinori Hattori <hattya@gentoo.org> -uim-svn-20040124.ebuild:
  cleaned out old ebuild.

  17 Jul 2004; David Holm <dholm@gentoo.org> uim-svn-20040709.ebuild:
  Added to ~ppc.

*uim-svn-20040709 (09 Jul 2004)

  09 Jul 2004; Akinori Hattori <hattya@gentoo.org>
  +files/uim-svn-qtkde-helper.diff, +uim-svn-20040709.ebuild:
  build qtkde-helper and merged the changes of app-i18n/uim.

  07 Apr 2004; Akinori Hattori <hattya@gentoo.org> uim-svn-20040124.ebuild:
  inherit flag-o-matic.

  05 Apr 2004; Akinori Hattori <hattya@gentoo.org> uim-svn-20040124.ebuild,
  files/uim-svn-gtk-query-immodules-gentoo.diff:
  update patch from app-i18n/uim.

  28 Jan 2004; Akinori Hattori <hattya@gentoo.org uim-svn-20040124.ebuild:
  Blocks app-i18n/uim.

  26 Jan 2004; Akinori Hattori <hattya@gentoo.org> uim-svn-20040124.ebuild,
  files/uim-svn-gtk-query-immodules-gentoo.diff:
  Added a necessary patch.

*uim-svn-20040124 (25 Jan 2004)

  25 Jan 2004; Akinori Hattori <hattya@gentoo.org> uim-svn-20040124.ebuild:
  Initial import.
