@@ -1,6 +1,6 @@
-MD5 ec588a7743f22816d2ef7d8a5822445d ChangeLog 1526
+MD5 e1630b235c28a8eb7b80345d3da1f562 ChangeLog 1635
 MD5 e92a48548554c80cf90e18df17ff6a82 metadata.xml 156
-MD5 b121a521bd8b62e169dfedf1e1d906af uim-svn-20040709.ebuild 2197
+MD5 07316ff2434dfdc991326ff66f60ead4 uim-svn-20040709.ebuild 2199
 MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-uim-svn-20040709 0
 MD5 43709db248e2be1d40952ce99d3cae00 files/uim-svn-gtk-query-immodules-gentoo.diff 552
 MD5 6ac55183c0f2b2572c9679103d91d8c9 files/uim-svn-qtkde-helper.diff 744
