@@ -1,6 +1,9 @@
 # ChangeLog for app-i18n/uim-svn
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/uim-svn/ChangeLog,v 1.11 2004/11/04 14:28:31 hattya Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/uim-svn/ChangeLog,v 1.12 2004/11/06 12:29:05 hattya Exp $
+
+  06 Nov 2004; Akinori Hattori <hattya@gentoo.org> uim-svn-20040709.ebuild:
+  s/qtkde-helper/uim-kdehelper/
 
   04 Nov 2004; Akinori Hattori <hattya@gentoo.org>
   files/uim-svn-qtkde-helper.diff, uim-svn-20040709.ebuild:
